[tool.poetry]
name = "scriptsmith"
version = "0.1.0"
description = ""
authors = ["Kristian Marlowe Ole <krismar.ole@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.45.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
